<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="0dp"
    android:background="@drawable/bloquery_wallpaper_faded"
    tools:context=".ui.activity.LoginActivity">

    <RelativeLayout
        android:id="@+id/login_window"
        android:layout_width="250dp"
        android:layout_height="195dp"
        android:layout_centerInParent="true"
        android:elevation="4dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:background="@color/colorPrimaryBackground">

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            android:hint="@string/email_hint"/>

        <EditText
            android:id="@+id/login_password"
            android:layout_below="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="20"
            android:hint="@string/password_hint"/>

        <Button
            android:id="@+id/login_loginButton"
            android:layout_below="@+id/login_password"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimary"
            android:text="@string/login_button_text"
            android:textColor="@color/black_87"/>

        <TextView
            android:id="@+id/login_createAccountText"
            android:layout_below="@+id/login_loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textColor="@color/text_secondary_color"
            android:text="@string/create_account_prompt"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/create_account_window"
        android:layout_width="250dp"
        android:layout_height="195dp"
        android:layout_centerInParent="true"
        android:elevation="4dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:background="@color/colorPrimaryBackground"
        android:visibility="gone">

        <EditText
            android:id="@+id/create_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            android:hint="@string/email_hint"/>

        <EditText
            android:id="@+id/create_username"
            android:layout_below="@+id/create_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="20"
            android:hint="@string/username_hint"/>

        <EditText
            android:id="@+id/create_password"
            android:layout_below="@+id/create_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="20"
            android:hint="@string/password_hint"/>

        <Button
            android:id="@+id/create_createButton"
            android:layout_below="@+id/create_password"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginTop="7dp"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimary"
            android:text="@string/sign_up_button_text"
            android:textColor="@color/black_87"/>

    </RelativeLayout>

</RelativeLayout>
